adding more styling

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <span class="profile-name">Jeremy Robson</span>
       </div>
       <div class="selection">
-        Daily
-        Weekly
-        Monthly
+        <span>Daily</span>
+        <span>Weekly</span>
+        <span>Monthly</span>
       </div>
     </article>
     <article class="work-container card-container">
-      Work
+      <span class="card-title">Work</span>
       5hrs <!-- daily -->
       Previous - 7hrs <!-- daily -->
       32hrs <!-- weekly -->
@@ -36,7 +36,7 @@
       Previous - 128hrs <!-- monthly -->
     </article>
     <article class="play-container card-container">
-      Play
+      <span class="card-title">Play</span>
       1hr <!-- daily -->
       Previous - 2hrs <!-- daily -->
       10hrs <!-- weekly -->
@@ -45,7 +45,7 @@
       Previous - 29hrs <!-- monthly -->
     </article>
     <article class="study-container card-container">
-      Study
+      <span class="card-title">Study</span>
       0hrs <!-- daily -->
       Previous - 1hr <!-- daily -->
       4hrs <!-- weekly -->
@@ -54,7 +54,7 @@
       Previous - 19hrs <!-- monthly -->
     </article>
     <article class="exercise-container card-container">
-      Exercise
+      <span class="card-title">Exercise</span>
       1hr <!-- daily -->
       Previous - 1hr <!-- daily -->
       4hrs <!-- weekly -->
@@ -63,7 +63,7 @@
       Previous - 18hrs <!-- monthly -->
     </article>
     <article class="social-container card-container">
-      Social
+      <span class="card-title">Social</span>
       1hr <!-- daily -->
       Previous - 3hrs <!-- daily -->
       5hrs <!-- weekly -->
@@ -72,7 +72,7 @@
       Previous - 23hrs <!-- monthly -->
     </article>
     <article class="self-care-container card-container">
-      Self Care
+      <span class="card-title">Self Care</span> class="card-title"
       0hrs <!-- daily -->
       Previous - 1hr <!-- daily -->
       2hrs <!-- weekly -->
