Update on index.html and style.css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <section class="container">
-    <article class="main-container card-container">
+    <article class="main-container">
       <div class="profile">
         <img src="./images/image-jeremy.png" alt="" class="profile-img">
         <span class="profile-title">Report for</span>
@@ -35,14 +35,16 @@
       103hrs <!-- monthly -->
       Previous - 128hrs <!-- monthly -->
     </article>
-    <article class="play-container card-container">
-      <span class="card-title">Play</span>
-      1hr <!-- daily -->
-      Previous - 2hrs <!-- daily -->
-      10hrs <!-- weekly -->
-      Previous - 8hrs <!-- weekly -->
-      23hrs <!-- monthly -->
-      Previous - 29hrs <!-- monthly -->
+    <article class="play-container">
+      <div class="card-container">
+        <span class="card-title">Play</span>
+        1hr <!-- daily -->
+        Previous - 2hrs <!-- daily -->
+        10hrs <!-- weekly -->
+        Previous - 8hrs <!-- weekly -->
+        23hrs <!-- monthly -->
+        Previous - 29hrs <!-- monthly -->
+      </div>
     </article>
     <article class="study-container card-container">
       <span class="card-title">Study</span>
@@ -82,9 +84,9 @@
     </article>
   </section>
   
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Micah Weston</a>.
-  </div>
+  </div> -->
 </body>
 </html>
